# Arcadia

./: .gitignore  .gitmodules  Arcadia.sln  CMakeLists.txt  README.md
Arcadia/: Arcadia.vcxproj  Arcadia.vcxproj.filters  CMakeLists.txt
Arcadia/src/: Arcadia.h  arcpch.h
Arcadia/src/Arcadia/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Window.cpp  Window.h
Arcadia/src/Arcadia/Core/: Core.h  Global.h  Memory.cpp  Memory.h
Arcadia/src/Arcadia/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Arcadia/src/Arcadia/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Arcadia/src/Arcadia/Renderer/: RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h
Arcadia/src/Arcadia/Renderer/Vulkan/: RenderContext_VK.cpp  RenderContext_VK.h  VK_Base.h  VK_Context.cpp  VK_Context.h  VK_Engine.cpp  VK_Engine.h  VK_Error.cpp  VK_Error.h  VK_Global.h  VK_ImGuiLayer.cpp  VK_ImGuiLayer.h  VK_Image.cpp  VK_Image.h  VK_LogicalDevice.cpp  VK_LogicalDevice.h  VK_PhysicalDevice.cpp  VK_PhysicalDevice.h  VK_RendererAPI.cpp  VK_RendererAPI.h  VK_Shader.cpp  VK_Shader.h  VK_Surface.cpp  VK_Surface.h  VK_SwapChain.cpp  VK_SwapChain.h  VK_Utils.cpp  VK_Utils.h
Arcadia/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/assets/shaders/: shaderexample.frag.glsl  shaderexample.vert.glsl
Sandbox/assets/shaders/scripts/: CompileShaders.bat
Sandbox/src/: SandboxApp.cpp
doxygen/: GenerateDoc.bat  doxyfile.dox
scripts/: OpenVS.bat  SetupCMake.bat
